--- a/index.html
+++ b/index.html
@@ -13,7 +13,27 @@
     </head>
     <body>
         <!--HEADER-->
+        <header class="1-header">
+            <nav class="nav bd-grid">
+                <div>
+                    <a href="#" class="nav__logo">Marlon</a>
+                </div>
 
+                <div class="nav__menu" id="nav-menu">
+                    <ul class="nav__list">
+                        <li class="nav__item"><a href="#" class="nav__link active">Home</a></li>
+                        <li class="nav__item"><a href="#" class="nav__link">Work</a></li>
+                        <li class="nav__item"><a href="#" class="nav__link">Skills</a></li>
+                        <li class="nav__item"><a href="#" class="nav__link">Work</a></li>
+                        <li class="nav__item"><a href="#" class="nav__link">Contact</a></li>
+                    </ul>
+                </div>
+                
+                <div class="div nav__toggle" id="nav-toggle">
+                    <i class="bx bx-menu"></i>
+                </div>
+
+        </header>
         <main class="l-main">
 
         </main>
