started with the home page

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <!--BOX ICONS-->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
-    <title>Portfolio website complete</title>
+    <title>Success Chukwuemeka</title>
     </head>
     <body>
         <!--HEADER-->
         <header class="l-header">
             <nav class="nav bd-grid">
                 <div>
-                    <a href="#" class="nav__logo">Marlon</a>
+                    <a href="#" class="nav__logo">Success</a>
                 </div>
 
                 <div class="nav__menu" id="nav-menu">
@@ -36,6 +36,26 @@
         </header>
 
         <main class="l-main">
+            <!-- Home -->
+             <section class="home bd-grid" id="home">
+                <div class="home__data">
+                    <h1 class="home__title">Hi, <br>I am <span class="home__title-color">Success</span><br> Web Developer</h1>
+                    <a href="#" class="button">Contact</a>
+                </div>
+                    <!-- <h2 class="home__subtitle">I'm a web developer</h2>
+                    <p class="home__description">I create responsive websites and web applications.</p>
+                    <a href="#" class="button">Download CV</a> -->
+
+                    <div class="home__social">
+                        <a href="#" class="home__social-icon"><i class='bx bxl-linkedin' ></i></a>
+                        <a href="#" class="home__social-icon"><i class='bx bxl-whatsapp' ></i></a>
+                        <a href="#" class="home__social-icon"><i class='bx bxl-github' ></i></a>
+                    </div>
+
+                    <div class="home__img">
+                        <img src="assets/2img/IMG_7823 10.01.00.JPG" alt="">
+                    </div>
+             </section>
         </main>
 
         <!--FOOTER-->
