testing the removal of image background

--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
                     </div>
 
                     <div class="home__img">
-                        <img src="assets/2img/IMG_7823 10.01.00.JPG" alt="">
+                        <!-- <img src="assets/2img/IMG_7823 10.01.00.JPG" alt=""> -->
+                        <img src="assets/2img/IMG_7823_10.01.00-removebg-preview.png" alt="">
                     </div>
              </section>
         </main>
